All_Component_DX/force-app/main/default/objects/Checklist__c/fields/ChecklistMetaJSON__c.field-meta.xml
<CustomField>
    <fullName>ChecklistMetaJSON__c</fullName>
    <description>This field is used to hold the JSON information related to Checklist Layout Structure</description>
    <label>ChecklistMetaJSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>