All_Component_DX/force-app/main/default/objects/Checklist__c/fields/ChecklistProcessID__c.field-meta.xml
<CustomField>
    <fullName>ChecklistProcessID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is ued to hold the reference to the Checklist Process</description>
    <label>ChecklistProcessID</label>
    <referenceTo>ServiceMax_Processes__c</referenceTo>
    <relationshipLabel>Checklists</relationshipLabel>
    <relationshipName>Checklists</relationshipName>
    <type>Lookup</type>
</CustomField>