All_Component_DX/force-app/main/default/objects/Checklist__c/fields/SM_Checklist_Group_Id__c.field-meta.xml
<CustomField>
    <fullName>SM_Checklist_Group_Id__c</fullName>
    <description>This is used to identify a checklist record that is split across multiple rows when ChecklistMetaJSON is split</description>
    <label>Checklist Group Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>