All_Component_DX/force-app/main/default/objects/Checklist__c/fields/SM_Parts_Order__c.field-meta.xml
<CustomField>
    <fullName>SM_Parts_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Parts Order</description>
    <label>Parts Order</label>
    <referenceTo>RMA_Shipment_Order__c</referenceTo>
    <relationshipLabel>Checklists</relationshipLabel>
    <relationshipName>Checklists</relationshipName>
    <type>Lookup</type>
</CustomField>