All_Component_DX/force-app/main/default/objects/Checklist__c/fields/SM_Started_By__c.field-meta.xml
<CustomField>
    <fullName>SM_Started_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to capture user who started the checklist.</description>
    <inlineHelpText>Used to capture user who started the checklist.</inlineHelpText>
    <label>Started By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Checklists1</relationshipName>
    <type>Lookup</type>
</CustomField>