All_Component_DX/force-app/main/default/objects/Checklist__c/fields/SM_Work_Detail__c.field-meta.xml
<CustomField>
    <fullName>SM_Work_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Work Detail</description>
    <label>Work Detail</label>
    <referenceTo>Service_Order_Line__c</referenceTo>
    <relationshipLabel>Checklists</relationshipLabel>
    <relationshipName>Checklists</relationshipName>
    <type>Lookup</type>
</CustomField>