All_Component_DX/force-app/main/default/objects/Checklist__c/fields/What_Id__c.field-meta.xml
<CustomField>
    <fullName>What_Id__c</fullName>
    <description>This field is used to hold the reference Id to Source / Transaction Record</description>
    <label>What Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>